src/components/Sections/SectionMarkdown.less
@import (reference) "../../css/variables";

.section-markdown {
  word-wrap: break-word;
  white-space: pre-wrap;
  min-height: 100%;

  .hljs {
    display: inline-block !important;
    white-space: pre-wrap !important;
    word-wrap: break-word !important;
  }

  img {
    max-width: 100%;
    page-break-inside: avoid;
  }

  .markdown {
    &.blockquote {
      padding: 0 15px;
      margin-left: 0;
      color: #777;
      border-left: 4px solid @brand-color;
    }
    &.inline-blockquote{
      color: @markdown-inline-blockquote-color;
      background-color: @markdown-inline-blockquote-bg-color;
      border-radius: 3px;
      padding: 0;
    }
  }

  .preplacer {
    display: block;
    margin-block-start: 1.1em;
    margin-block-end: 1.1em;
    margin-inline-start: 0;
    margin-inline-end: 0;
    page-break-inside: avoid;

    &:last-child {
      margin-bottom: 0 !important;
    }

    &:first-child {
      margin-top: 0 !important;
    }
  }
}

